Upgrate to java 11